@@ -57,6 +57,7 @@ DOC_SOURCE = \
 	Documentation/topics/porting.rst \
 	Documentation/topics/record-replay.rst \
 	Documentation/topics/tracing.rst \
+	Documentation/topics/usdt-probes.rst \
 	Documentation/topics/userspace-tso.rst \
 	Documentation/topics/userspace-tx-steering.rst \
 	Documentation/topics/windows.rst \
